--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -25,10 +25,60 @@
       align-items: center;
       margin-top: 1rem;
       margin-bottom: 2rem;
-      input[type="checkbox"] {
-        margin: 0 10px 2px 0;
-        height: 18px;
-        width: 18px;
+      .CheckboxContainer {
+        display: block;
+        position: relative;
+        padding-left: 30px;
+        margin-bottom: 12px;
+        line-height: 15px;
+        cursor: pointer;
+        font-size: 22px;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        input {
+          position: absolute;
+          opacity: 0;
+          cursor: pointer;
+          height: 0;
+          width: 0;
+        }
+        .Checkmark {
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 18px;
+          width: 18px;
+          background-color: #eee;
+          border-radius: 5px;
+          border: 1px solid #ccc;
+        }
+        input:checked ~ .Checkmark {
+          background-color: #2196F3;
+          height: 20px;
+          width: 20px;
+          border: none;
+        }
+        .Checkmark:after {
+          content: "";
+          position: absolute;
+          display: none;
+        }
+        input:checked ~ .Checkmark:after {
+          display: block;
+        }
+        .Checkmark:after {
+          left: 8px;
+          top: 4px;
+          width: 3px;
+          height: 8px;
+          border: solid white;
+          border-width: 0 2px 2px 0;
+          -webkit-transform: rotate(45deg);
+          -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+        }
       }
       span {
         font-size: .8rem;
