--- a/src/Components/UI/Button/Button.module.scss
+++ b/src/Components/UI/Button/Button.module.scss
@@ -1,3 +1,5 @@
+@import '../../../variables.module.scss';
+
 .Button {
     background-color: transparent;
     color: white;
@@ -22,5 +24,5 @@
 }
 
 .General {
-    color: blue;
+    color: $general-button;
 }
