--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -18,11 +18,20 @@
     font-size: 1.1rem;
   }
   .LoginForm {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     .RememberMeCheckbox {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      align-items: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
       margin-top: 1rem;
       margin-bottom: 2rem;
       .CheckboxContainer {
@@ -98,4 +107,3 @@
     }
   }
 }
-
